force-app/main/default/objects/Docusign_Defaults__c/Docusign_Defaults__c.object-meta.xml
<CustomObject>
    <label>Docusign Default</label>
    <nameField>
        <displayFormat>DD-{00}</displayFormat>
        <label>Docusign Defaults No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Docusign Defaults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>