force-app/main/default/objects/Docusign_Defaults__c/fields/Docusign_Additional_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Additional_Agreement__c</fullName>
    <label>Docusign Additional Agreement(Account)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>