force-app/main/default/objects/Docusign_Defaults__c/fields/Docusign_Additional_Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Additional_Assumptions__c</fullName>
    <label>Docusign Additional Assumptions(Opty)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>