force-app/main/default/objects/Docusign_Defaults__c/fields/DocuSign_Envelope_Template_MSA__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Envelope_Template_MSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocuSign Envelope Template(MSA)</label>
    <referenceTo>dfsle__EnvelopeConfiguration__c</referenceTo>
    <relationshipLabel>Docusign Defaults</relationshipLabel>
    <relationshipName>Docusign_Defaults</relationshipName>
    <type>Lookup</type>
</CustomField>