force-app/main/default/objects/Docusign_Defaults__c/fields/DocuSign_Gen_Template__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Gen_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocuSign Gen Template</label>
    <referenceTo>dfsle__GenTemplate__c</referenceTo>
    <relationshipLabel>Docusign Defaults</relationshipLabel>
    <relationshipName>Docusign_Defaults</relationshipName>
    <type>Lookup</type>
</CustomField>