force-app/main/default/objects/Docusign_Defaults__c/fields/DocuSign_Gen_Template_Blue_Yon_Talent__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Gen_Template_Blue_Yon_Talent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocuSign Gen Template - Blue Yon(Talent)</label>
    <referenceTo>dfsle__GenTemplate__c</referenceTo>
    <relationshipLabel>Docusign Defaults (DocuSign Gen Template - Blue Yon(Talent))</relationshipLabel>
    <relationshipName>Docusign_Defaults3</relationshipName>
    <type>Lookup</type>
</CustomField>