force-app/main/default/objects/Docusign_Defaults__c/fields/DocuSign_Gen_Template_Talent__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Gen_Template_Talent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocuSign Gen Template(Talent)</label>
    <referenceTo>dfsle__GenTemplate__c</referenceTo>
    <relationshipLabel>Docusign Defaults (DocuSign Gen Template(Talent))</relationshipLabel>
    <relationshipName>Docusign_Defaults1</relationshipName>
    <type>Lookup</type>
</CustomField>