force-app/main/default/objects/Docusign_Defaults__c/fields/Docusign_Pricing_Description__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Pricing_Description__c</fullName>
    <label>Docusign Pricing Description(Account)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>