force-app/main/default/objects/Docusign_Defaults__c/fields/Docusign_Terms__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Terms__c</fullName>
    <label>Docusign Terms(Opty)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>