force-app/main/default/objects/Docusign_Defaults__c/fields/Randstad_Customer_Gen_template__c.field-meta.xml
<CustomField>
    <fullName>Randstad_Customer_Gen_template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Randstad Customer Gen template</label>
    <referenceTo>dfsle__GenTemplate__c</referenceTo>
    <relationshipLabel>Docusign Defaults (Randstad Customer Gen template)</relationshipLabel>
    <relationshipName>Docusign_Defaults4</relationshipName>
    <type>Lookup</type>
</CustomField>