force-app/main/default/objects/Docusign_Defaults__c/fields/Special_Accounts_Member__c.field-meta.xml
<CustomField>
    <fullName>Special_Accounts_Member__c</fullName>
    <label>Special Accounts Member</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>