force-app/main/default/objects/Docusign_Defaults__c/fields/template_ID__c.field-meta.xml
<CustomField>
    <fullName>template_ID__c</fullName>
    <label>template ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>